# website_generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  htmlGen.cpp  htmlGen.h
libs/HtmlGen/: CMakeLists.txt  element.h  htmlGen.cpp  htmlGen.h
scripts/: index.wg
